--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -23,10 +23,10 @@
 							{{ 'Showing search results for'|t }}
 						</div>
 						<h3 class="search-page__title">
-							"{{ element.keyword }}"
+							"<span class="overview-form-contents__keyword">{{ element.keyword }}</span>"
 						</h3>
 						<div class="search-page__count">
-							{{ element['content']['total'] }}
+              <span class="overview-form-contents__total">{{ element['content']['total'] }}</span>
 						</div>
 					</div>
 				</div>
