--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -56,6 +56,7 @@
 							</button>
 						</div>
 						<div class="accordion__items js-accordion__items">
+              {{ element['facets'].field_article_type }}
 							{{ element['facets'].field_class }}
 							{{ element['facets'].field_location }}
 							{{ element['facets'].field_season }}
