Disabled autocomplete on header search input field

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -48,6 +48,7 @@
               .setAttribute('name', 'text')
               .setAttribute('aria-label', 'Search')
               .setAttribute('id', 'js-header-search-input') }}
+               autocomplete="off"
               >
             <button {{ create_attribute().setAttribute('type', 'submit').addClass('header-search__submit') }} aria-label="search">
               {% include '@reusable-component/svg-icon.twig' with {
