Added markup and styling for entity overview search total

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/overview-content.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/overview-content.html.twig
@@ -25,5 +25,6 @@
   {% if content.no_results %}
       {{ content.no_results }}
   {% endif %}
-  {{ content|without(['content', 'no_results']) }}
+  <div class="overview-form__total">{{ content.total }}</div>
+  {{ content|without(['content', 'no_results', 'total']) }}
 </div>
