--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -148,6 +148,8 @@
     font-family: var(--heading-font-family);
     line-height: 1.3;
     text-decoration: none;
+    word-break: break-word;
+    hyphens: auto;
 
     &--authoring-information {
       margin-top: 10px;
@@ -158,8 +160,8 @@
 
     &--blog-post {
       margin-bottom: 0 !important; /* stylelint-disable-line */
-      padding-left: 20px;
       padding-right: 20px;
+      padding-left: 20px;
     }
   }
 
