--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
@@ -40,7 +40,7 @@
     <div class="col-md-8 col-lg-7 col-xs-12">
       {% if org_name %}
         <h2>{{ map_title }} - {{ org_name }}</h2>
-        På dette kort kan du finde artikler og lokationer oprettet af {{ org_name }}. Her kan du finde idéer og inspiration til aktiviteter og undervisningsforløb i naturen.
+        På dette kort kan du finde artikler og lokationer oprettet af {{ org_name }}. Her kan du finde idéer og inspiration til aktiviteter og undervisningsforløb i naturen. Du kan finde et kort over alle brugernes materialer <a href="/kort">her</a>.
         {% else %}
         <h1>{{ map_title }}</h1>
           {{ description_above_map }}
