SIS2-594, SIS2-595, SIS2-607, SIS2-598, SIS2-596, SIS2-597

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -6,6 +6,8 @@
   }
   .search-title {
     min-width: 50%;
+    display: flex;
+    align-items: center;
   }
   .search-facets {
     display: flex;
