--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
@@ -5,12 +5,12 @@
 
 .theme-green {
   --theme-background-color: var(--color-green);
-  --theme-color: #fff;
+  --theme-color: var(--color-white);
   --theme-button-background-color: var(--color-pink);
   --theme-button-color: var(--color-purple);
   --theme-arrow-background-color: var(--color-pink);
   --theme-arrow-color: var(--color-purple);
-  --theme-link-color: #ffefe5;
+  --theme-link-color: var(--color-white);
   --theme-divider-background-color: #ffefe5;
   --theme-accordion-color: var(--color-white);
   --theme-input-border: #ffefe5;
