--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
@@ -148,11 +148,16 @@
 
   .modal__close {
     position: absolute;
-    top: -15px;
-    left: -14px;
-    width: 30px;
-    height: 30px;
+    top: 5px;
+    right: 4px;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
+
+    & svg {
+      max-width: 100%;
+      max-height: 100%;
+    }
 
     & svg > path {
       fill: #3d2859;
