--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--blog-list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--blog-list.html.twig
@@ -8,6 +8,7 @@
   {{ title_suffix }}
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8">
+      <h2>{{ content.field_title }}</h2>
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4">
       <div class="swiper-navigation">
