--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-blog-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-blog-form.html.twig
@@ -17,7 +17,7 @@
 
     <div class="form-overview-header">
       <div class="search-title">
-        {{ element['search'].title }}
+        <h2>{{ element['blog_title'] }}</h2>
       </div>
       <div class="search-facets">
         {{ element['facets'].sort }}
