SIS2-624: Fix author information and date on blogs

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -154,8 +154,10 @@
     &--authoring-information {
       margin-top: 10px;
       padding-left: 20px;
+      padding-right: 20px;
       font-weight: normal;
       font-size: var(--base-font-size-small);
+      hyphens: none;
     }
 
     &--blog-post {
