SIS2-625: Changed hyphens auto and word-break to only work on screen size smaller then 992px

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
@@ -13,9 +13,12 @@ h6 {
   margin-bottom: 10px;
   font-weight: var(--heading-font-weight);
   font-family: var(--heading-font-family);
-  word-break: break-word;
-  overflow-wrap: break-word;
-  hyphens: auto;
+
+  @media (--viewport-sm-max) {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    hyphens: auto;
+  }
 }
 
 h1 {
