SIS2-31: Renamed Divider to Skillelinje + responsive style changes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/divider.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/divider.css
@@ -7,8 +7,13 @@
   position: relative;
   width: 100%;
   height: 1px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  @media (--viewport-md-min) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 
   &::before {
     display: block;
