SIS2-631: Create new image field for green orgs on profile

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
@@ -43,6 +43,10 @@
     <div class="profile__hero">
       {{ content.field_top_image }}
     </div>
+    {% elseif content.field_top_image_anonymous[0] %}
+      <div class="profile__hero">
+        {{ content.field_top_image_anonymous }}
+      </div>
   {% endif %}
   <div class="profile__content{{ profile.field_section_bg_graphics.value ? ' section section--background-graphics' : '' }}">
     {% if profile.field_section_bg_graphics.value %}
