SIS2-633: Fix blog previews

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--list.html.twig
@@ -70,7 +70,7 @@
 {{ attach_library('sis/inspiration-overview') }}
 
 <div class="inspiration-overview__item">
-  <a href="{{ url }}" class="inspiration-overview__item-link">
+  <a href="{{ url }}" class="inspiration-overview__item-link inspiration-overview__item-link--blog">
     <div class="inspiration-overview__item-inner">
       <div class="inspiration-overview__image">
         {% if content.field_list_media[0] %}
