--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--full.html.twig
@@ -67,74 +67,60 @@
  *
  */
 #}
-{{ attach_library('sis/inspiration-overview') }}
 
-{% set subject_items = content.field_subject['#items'] %}
+{{ attach_library('sis/article-page') }}
+{{ attach_library('sis/facts-box') }}
+{{ attach_library('sis/slider-pager-count') }}
+{{ attach_library('sis/modal-article') }}
+{{ attach_library('sis/related-articles') }}
 
-{% set typeAltrerLink = node.field_article_type.entity.field_page_link.0.url %}
-{% set typeUrl = path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_article_type.entity.id}) %}
-{% set dataDialogOpts = { closeText: "", classes: { "ui-dialog": "article-modal" }} %}
+{% set classes = [
+  'article-page',
+] %}
 
-<div class="inspiration-overview__item">
-	<div class="inspiration-overview__item-inner">
-    <a href="{{ url }}" class="inspiration-overview__item-link">
-			<div class="inspiration-overview__image">
+<article{{ attributes.addClass(classes) }}>
+  <div class="article-page__modal">
+    <div class="article-page__modal__inner">
+      <div class="article-page__modal__content">
+        {% if node.field_subject[0] or node.field_class[0] or node.field_location[0] or node.field_season[0] %}
+          <div class="article-page__modal-tags">
+            {% if node.field_subject[0] %}
+              {% for subject in node.field_subject %}
+                <a href="/taxonomy/term/{{ subject.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ subject.entity.name.value }}</a>
+              {% endfor %}
+            {% endif %}
+            {% if node.field_class[0] %}
+              {% for class in node.field_class %}
+                <a href="/taxonomy/term/{{ class.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ class.entity.name.value }}</a>
+              {% endfor %}
+            {% endif %}
+            {% if node.field_location[0] %}
+              {% for location in node.field_location %}
+                <a href="/taxonomy/term/{{ location.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ location.entity.name.value }}</a>
+              {% endfor %}
+            {% endif %}
+            {% if node.field_season[0] %}
+              {% for season in node.field_season %}
+                <a href="/taxonomy/term/{{ season.entity.tid.value }}" class="article-page__modal-tag" target="_blank">{{ season.entity.name.value }}</a>
+              {% endfor %}
+            {% endif %}
+          </div>
+        {% endif %}
+        {{ content.body }}
+        {% if content.field_external_link_logo[0] %}
+          <div class="article-page__modal__image-logo">
+            {{ content.field_external_link_logo }}
+          </div>
+        {% endif %}
+      </div>
+      <div class="article-page__modal__image">
         {% if content.field_list_media[0] %}
           {{ content.field_list_media }}
-        {% elseif content.field_list_media_anonymous[0]%}
-          {{ content.field_list_media_anonymous }}
         {% endif %}
-				<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
-					<div class="inspiration-overview__type">
-						{{ node.field_article_type.entity.name.value }}
-					</div>
-				</a>
-			</div>
-			<div class="inspiration-overview__content">
-				{% if content.field_class[0]|length > 0 %}
-					<div class="inspiration-overview__class">
-						{% include '@reusable-component/svg-icon.twig' with {
-              'attributes': '',
-              'svgIconName': 'reading'
-            } %}
-						{# loop through field_class items #}
-						{% for item in content.field_class['#items'] %}
-							{% set term = item.entity %}
-							{{ term.name.value }}
-							{# adding separator  if its not last element in loop #}
-							{% if not loop.last %}
-								{{ '|' }}
-							{% endif %}
-						{% endfor %}
-					</div>
-				{% endif %}
-        <a href="{{ url }}" class="inspiration-overview__item-link">
-					<div class="inspiration-overview__title">
-						{{ label }}
-					</div>
-					<div class="inspiration-overview__description">
-						{{ content.field_description }}
-					</div>
-				</a>
-			</div>
-		</a>
-		{% if subject_items|length > 0 %}
-			<div class="inspiration-overview__subject">
-				{% if subject_items|length > 2 %}
-					{% for item in subject_items|slice(0, 2) %}
-						{% if item.entity.tid.value %}
-							<a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.tid.value}) }}">{{ item.entity.name.value }}</a>
-						{% endif %}
-					{% endfor %}
-					<div class="inspiration-overview__subject-item--more-text">
-						+
-						{{ subject_items|length - 2 }}
-						{{ 'subjects'|t }}
-					</div>
-				{% else %}
-					{{ content.field_subject }}
-				{% endif %}
-			</div>
-		{% endif %}
-	</div>
-</div>
+      </div>
+    </div>
+    <div class="article-page__modal__footer">
+      <a href="{{ content.field_external_link.0['#url'] }}" class="button button--green" target="_blank">Gå til indhold</a>
+    </div>
+  </div>
+</article>
