--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--link-article--teaser.html.twig
@@ -80,7 +80,11 @@
 	<div class="inspiration-overview__item-inner">
     <a href="{{ url }}" class="inspiration-overview__item-link use-ajax" data-dialog-options="{{ dataDialogOpts|json_encode()|e('html_attr') }}" data-dialog-type="modal" >
 			<div class="inspiration-overview__image">
-				{{ content.field_list_media }}
+        {% if content.field_list_media[0] %}
+          {{ content.field_list_media }}
+        {% elseif content.field_list_media_anonymous[0]%}
+          {{ content.field_list_media_anonymous }}
+        {% endif %}
 				<a href="{{ typeAltrerLink ?? typeUrl }}" aria-label="{{ node.field_article_type.entity.name.value }}">
 					<div class="inspiration-overview__type">
 						{{ node.field_article_type.entity.name.value }}
