SIS2-464: Added external facets to form--entity-overview-filter-form and form--entity-overview-search-page

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -61,6 +61,7 @@
 							{{ element['facets'].field_location }}
 							{{ element['facets'].field_season }}
 							{{ element['facets'].field_subject }}
+							{{ element['facets'].external }}
 						</div>
 
 						<div class="custom-accordion-wrapper">
