--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -76,6 +76,7 @@
 							{{ element['facets'].field_location }}
 							{{ element['facets'].field_season }}
 							{{ element['facets'].field_subject }}
+							{{ element['facets'].external }}
 						</div>
 					</div>
 				</div>
