--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -23,7 +23,7 @@
 							{{ 'Showing search results for'|t }}
 						</div>
 						<h3 class="search-page__title">
-							"<span class="overview-form-contents__keyword">{{ element.keyword }}</span>"
+							"<span class="overview-form-contents__keyword">{{ element['keyword'] }}</span>"
 						</h3>
 						<div class="search-page__count">
               <span class="overview-form-contents__total">{{ element['content']['total'] }}</span>
