--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
@@ -14,6 +14,7 @@
   @nestedimport "./assets/components/css/components/01-particles/textarea.css";
 
   .form-item {
+    position: relative;
     margin-bottom: 15px;
 
     & .description {
