SIS2-595: Fix styling and markup on related articles slider pagination and header

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/related-articles.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/related-articles.css
@@ -1,9 +1,12 @@
 .article-page__related {
   &-header {
-    margin-bottom: 20px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    padding: 10px 0;
 
-    @media (--viewport-sm-min) {
-      margin-bottom: 48px;
+    & h2 {
+      margin-bottom: 0;
     }
   }
 
@@ -33,10 +36,6 @@
     align-items: center;
     justify-content: flex-end;
     height: 100%;
-
-    @media (--viewport-sm-min) {
-      padding-bottom: 18px;
-    }
 
     .swiper-button-next,
     .swiper-button-prev {
