--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -393,13 +393,13 @@
     {% if content.field_article_related | render is not empty %}
       <div class="article-page__related section section--spacing-bottom-none">
         <div class="row">
-          <div class="col-xs-12 col-sm-8 col-md-8">
+          <div class="col-xs-12 col-ms-6 col-sm-7 col-md-8">
             <div class="article-page__related-header">
               <h2>Læs også</h2>
 {#              <p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>#}
             </div>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="col-xs-12 col-ms-6 col-sm-5 col-md-4">
 
             <div class="swiper-navigation">
               {% if content.field_article_related|length > 0 %}
@@ -425,13 +425,13 @@
 		{% elseif related %}
       <div class="article-page__related section section--spacing-bottom-none">
 				<div class="row">
-					<div class="col-xs-12 col-sm-8 col-md-8">
+					<div class="col-xs-12 col-ms-6 col-sm-7 col-md-8">
 						<div class="article-page__related-header">
 							<h2>Læs også</h2>
 {#							<p>Gå på opdagelse i vores aktiviteter og materialer og find lige det, der passer til din undervisning.</p>#}
 						</div>
 					</div>
-					<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="col-xs-12 col-ms-6 col-sm-5 col-md-4">
 
             <div class="swiper-navigation">
               {% if related_count > 0 %}
