SIS2-638: Added margin-bottom 20px to p tags

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
@@ -75,7 +75,7 @@ h5 {
 
 p {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 
   &.resume {
     font-size: var(--base-font-size-large);
