--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/form-styling.css
@@ -17,14 +17,15 @@
     position: relative;
     margin-bottom: 15px;
 
-    & .description {
-      margin-top: 5px;
-      opacity: .5;
-    }
-
     .filter-wrapper {
       margin-top: -15px;
     }
+  }
+
+  .form-item .description {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    opacity: .5;
   }
 
   .form-actions {
