SIS2-660: Fix other blog posts markup and styling in blog post full template

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
@@ -103,6 +103,10 @@
   .inspiration-overview__item-link {
     width: 100%;
     height: auto;
+
+    &--blog {
+      height: 100%;
+    }
   }
 
   .inspiration-overview__title {
