SIS2-664: Adjusted styling for embedded images in rte so align left, center and right are working as intended

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -87,10 +87,10 @@ img {
   }
 }
 
-figure {
+figure,
+.embedded-entity {
   width: auto;
   margin: 0;
-  text-align: left;
 
   &.align-left {
     float: none;
