SIS2-624: Add height: 100%; to inspiration-overview__item-link--blog

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -67,6 +67,10 @@
     width: 100%;
     color: var(--color-purple);
     text-decoration: none;
+
+    &--blog {
+      height: 100%;
+    }
   }
 
   &__image {
